--- a/stockwatch/CommonViews/LabelEntryView.xaml
+++ b/stockwatch/CommonViews/LabelEntryView.xaml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:local="clr-namespace:stockwatch.CommonViews"
              x:Class="stockwatch.CommonViews.LabelEntryView"
-             x:Name="labelEntryView">
+             x:Name="labelEntryView"
+             Loaded="labelEntryView_Loaded">
+    <ContentView.Resources>
+        <Style x:Key="InvalidEntryStyle" TargetType="Entry">
+            <Setter Property="TextColor" Value="Red" />
+        </Style>
+        <toolkit:NumericValidationBehavior x:Name="numericValidationBehavior" x:Key="numericValidationBehavior"
+            Flags="ValidateOnValueChanged"
+            InvalidStyle="{StaticResource InvalidEntryStyle}"
+            MinimumValue="{Binding MinNumberValue, Source={x:Reference labelEntryView}}"
+            MaximumValue="{Binding MaxNumberValue, Source={x:Reference labelEntryView}}"/>
+    </ContentView.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="{Binding TextWidth, Source={x:Reference labelEntryView}}"></ColumnDefinition>
