--- a/stockwatch/ChildViews/FindPotentialSymbolSettingView.xaml
+++ b/stockwatch/ChildViews/FindPotentialSymbolSettingView.xaml
@@ -14,8 +14,8 @@
         </ResourceDictionary>
     </ContentView.Resources>
     <VerticalStackLayout
-        Padding="5,0"
-        Spacing="10">
+        Padding="10,0"
+        Spacing="2">
         <commonViews:LabelPickerView
             x:Name="pckMarket"
             ItemsSource="{Binding Source={x:Static local:FindPotentialSymbolSettingView.Markets}}"
@@ -77,7 +77,7 @@
             Text="3"
             MinNumberValue="1"
             MaxNumberValue="{Binding MaxMonthsToAnalyze, Source={x:Reference findPotentialSymbolSettingView}}"
-            Label="{Binding Source={x:Static strings:AppResources.LBL_Before}}"
+            Label="{Binding Source={x:Static strings:AppResources.LBL_Latest}}"
             Unit="{Binding Source={x:Static strings:AppResources.LBL_MonthsFromNow}}">
         </commonViews:LabelEntryView>
     </VerticalStackLayout>
