--- a/stockwatch/ChildViews/FindPotentialSymbol/FindPotentialSymbolSettingView.xaml
+++ b/stockwatch/ChildViews/FindPotentialSymbol/FindPotentialSymbolSettingView.xaml
@@ -4,8 +4,8 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
              xmlns:commonViews="clr-namespace:stockwatch.CommonViews"
-             xmlns:local="clr-namespace:stockwatch.ChildViews"
-             x:Class="stockwatch.ChildViews.FindPotentialSymbolSettingView"
+             xmlns:local="clr-namespace:stockwatch.ChildViews.FindPotentialSymbol"
+             x:Class="stockwatch.ChildViews.FindPotentialSymbol.FindPotentialSymbolSettingView"
              x:Name="findPotentialSymbolSettingView">
     <ContentView.Resources>
         <ResourceDictionary>
