--- a/stockwatch/ChildViews/MySymbol/MySymbolAnalyzingResultView.xaml
+++ b/stockwatch/ChildViews/MySymbol/MySymbolAnalyzingResultView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
-             x:Class="stockwatch.ChildViews.MySymbolAnalyzingResultView"
+             x:Class="stockwatch.ChildViews.MySymbol.MySymbolAnalyzingResultView"
              x:Name="resultView">
     <ContentView.Resources>
         <ResourceDictionary>
