--- a/stockwatch/Pages/FindPotentialSymbolPage.xaml
+++ b/stockwatch/Pages/FindPotentialSymbolPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
-             xmlns:childViews="clr-namespace:stockwatch.ChildViews"
+             xmlns:childViews="clr-namespace:stockwatch.ChildViews.FindPotentialSymbol"
              xmlns:local="clr-namespace:stockwatch.Pages"
              x:Class="stockwatch.Pages.FindPotentialSymbolPage"
              Title="{Binding Source={x:Static strings:AppResources.LBL_PotentialSymbols}}">
