--- a/stockwatch/Pages/MainPage.xaml
+++ b/stockwatch/Pages/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
              xmlns:commonViews="clr-namespace:stockwatch.CommonViews"
-             xmlns:childViews="clr-namespace:stockwatch.ChildViews"
+             xmlns:childViews="clr-namespace:stockwatch.ChildViews.MySymbol"
              xmlns:local="clr-namespace:stockwatch.Pages"
              x:Class="stockwatch.Pages.MainPage"
              x:Name="mainPage"
