--- a/stockwatch/Pages/DataCollectionPage.xaml
+++ b/stockwatch/Pages/DataCollectionPage.xaml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"             
+             xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
+             xmlns:childViews="clr-namespace:stockwatch.ChildViews.DataCollection"
              x:Class="stockwatch.Pages.DataCollectionPage"
              Title="DataCollectionPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout
+            Padding="10,0"
+            Spacing="25">
+        <childViews:DataCollectionSettingView
+            x:Name="dataCollectionSettingView" />
+
+        <Button
+            x:Name="btnProcess"
+            Text="{Binding Source={x:Static strings:AppResources.LBL_Process}}"
+            Clicked="OnProceButtonClicked"
+            HorizontalOptions="Fill" />
+
+        <Label
+            x:Name="lblResult"
+            HorizontalOptions="Fill"
+            FontSize="Medium" />
+        
     </VerticalStackLayout>
 </ContentPage>
